# AbocApplication

./: README.md
ABOC Application TABLET V1/: build.gradle  settings.gradle
ABOC Application TABLET V1/app/: build.gradle  proguard-rules.pro
ABOC Application TABLET V1/app/src/main/: AndroidManifest.xml
ABOC Application TABLET V1/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
ABOC Application TABLET V1/app/src/main/jni/: Android.mk  Application.mk  compile-libpng-android.sh
ABOC Application TABLET V1/app/src/main/jni/libpng-1.6.34/: Android.mk
ABOC Application TABLET V1/app/src/main/jni/zlib-1.2.11/: Android.mk
ABOC Application TABLET V1/app/src/main/res/layout/: activity_anonymous_auth.xml  activity_emailpassword.xml  activity_facebook.xml  activity_google.xml  activity_home.xml  activity_layout_queue_service_number.xml  activity_main.xml  activity_main_book.xml  activity_main_firebase_notification_fall_detection_data.xml  activity_main_firebase_update_and_delete_data.xml  activity_main_input_arraylist_layout.xml  activity_main_iot.xml  activity_main_profile_fall_detection.xml  activity_main_request_repair.xml  activity_main_slider_intro_aboc.xml  activity_manage_user.xml  activity_phone_auth.xml  activity_scan_image_main.xml  app_intro1.xml  app_intro2.xml  app_intro3.xml  bluetooth_connection_page.xml  chat_activity_main.xml  face_detect_surface_view.xml  fragment_main.xml  home_control.xml  tab_fragment_1.xml  tab_fragment_2.xml  tab_fragment_3.xml  tab_fragment_4.xml  tab_fragment_5.xml  tab_fragment_6.xml  tab_fragment_7.xml  video_page.xml  voice_control_light.xml  voice_control_page.xml
ABOC Application TABLET V1/app/src/main/res/values/: colors.xml  keys.xml  strings.xml  styles.xml
ABOC Application TABLET V1/app/src/main/res/values-es/: strings.xml
ABOC Application TABLET V1/app/src/main/res/values-w820dp/: strings_activity_login.xml
ABOC Application TABLET V1/gradle/wrapper/: gradle-wrapper.properties
ABOC Application TABLET V1/scanlibrary/src/main/: AndroidManifest.xml
ABOC Application TABLET V1/scanlibrary/src/main/jni/sdk/java/javadoc/: index.html
ABOC Application TABLET V1/scanlibrary/src/main/jni/sdk/native/jni/: OpenCVConfig.cmake  OpenCVModules_arm64_v8a.cmake  OpenCVModules_armeabi.cmake  OpenCVModules_armeabi_v7a.cmake  OpenCVModules_mips.cmake  OpenCVModules_mips64.cmake  (+3 more)
ABOC Description/: FNC.xlsx
ABOC Description/Roll Up/: Roll up_LongArnDu.docx
ABOC Description/Roll Up/Roll Up Illustrator_LongArnDuTeam/: ABOC_Book_Machine.ai  Face_Recognition_ABOC.ai  IOT_CONTROL_ABOC.ai  Menu_ABOC.ai  Notification_ABOC.ai  Notification_Firebase_Service_ABOC.ai  PAGE_ABOC.ai  PAGE_HOME_ABOC.ai  PAGE_NAVIGATION_ABOC.ai  PAGE_Voice_Recognition_ABOC.ai  Profile_Fall_Detection_ABOC.ai  SERVICE_GOOGLE_ABOC.ai  Speech_Recognition_ABOC.ai  Voice_Recognition_ABOC.ai  Voice_Recognition_Menu_Reading_Book_ABOC.ai  Voice_Recognition_Read_Book_ABOC.ai
ABOC Description/Roll Up/Roll Up Image_LongArnDu/: photothumb.db
(+146 files in other folders)
